Post list flicker bug fixed

--- a/src/styles/components/ListPlaceholder.module.scss
+++ b/src/styles/components/ListPlaceholder.module.scss
@@ -3,6 +3,7 @@
 .wrapper {
     position: relative;
     width: 100%;
+    margin-bottom: 800px;
 }
 
 .gradient {
